# ts-interface-generator

./: .gitignore  pyproject.toml
tig/: ts_interface_generator.py
ts-generator/: ts_interface_generator.py  type_conversion.py
