[tool.poetry]
name = "ts-interface-generator"
version = "0.1.0"
description = ""
authors = ["vladislavshokorov <valsshokorov@gmail.com>"]
readme = "README.md"
packages = [{include = "tig"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
